other_resources/deploy-back.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: back-deployment
spec:
  selector:
    matchLabels:
      app: xilixili-back
  replicas: 2 # tells deployment to run 2 pods matching the template

  template:
    metadata:
      labels:
        app: xilixili-back
    spec:
      containers:
        - name: xilixili-back
          image: registry-intl.cn-hongkong.aliyuncs.com/xilixili/xilixili-server:v1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
  labels:
    app: xilixili-back
spec:
  selector:
    app: xilixili-back
  ports:
    - port: 3000
      targetPort: 3000
