other_resources/deploy-vue.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: front-deployment
spec:
  selector:
    matchLabels:
      app: xilixili-vue-project
  replicas: 2

  template:
    metadata:
      labels:
        app: xilixili-vue-project
    spec:
      containers:
        - name: xilixili-vue-project
          image: registry-intl.cn-hongkong.aliyuncs.com/xilixili/xilixili-vue:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: xilixili-vue-project
spec:
  selector:
    app: xilixili-vue-project
  ports:
    - port: 80
      targetPort: 80
