other_resources/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    #just in case 'ingressClassName' does not work
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - www.xilixili.site
    secretName: ingress-secret
  rules:
  - host: www.xilixili.site
    http:
      paths:
      - path: /api
        backend:
          serviceName: back-service
          servicePort: 3000
      - path: /
        backend:
          serviceName: front-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
